[package]
name = "nixte-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_json = "1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "2"
tower = "0.5"
http = "1"
headers = "0.4"
mime = "0.3"
